--- a/_includes/sablona.njk
+++ b/_includes/sablona.njk
@@ -48,13 +48,13 @@
                 <a href="/pokoje/" class="menu__link">Pokoje</a>
               </li>
               <li class="menu__item">
-                <a href="/vybaveni.html" class="menu__link">Vybavení</a>
+                <a href="/vybaveni/" class="menu__link">Vybavení</a>
               </li>
               <li class="menu__item">
-                <a href="/galerie.html" class="menu__link">Galerie</a>
+                <a href="/galerie/" class="menu__link">Galerie</a>
               </li>
               <li class="menu__item">
-                <a href="/kontakt.html" class="menu__link">Kontakt</a>
+                <a href="/kontakt/" class="menu__link">Kontakt</a>
               </li>
             </ul>
           </nav>
